[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Anton-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Login.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_left = 2.3833
margin_top = -8.34152
margin_right = 1030.38
margin_bottom = 594.658
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Chat Multiplay
"
}

[node name="Input_Name" type="LineEdit" parent="Panel"]
margin_left = 162.0
margin_top = 293.0
margin_right = 697.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input_IP" type="LineEdit" parent="Panel"]
margin_left = 161.0
margin_top = 360.0
margin_right = 696.0
margin_bottom = 409.0
text = "127.0.0.1:8080"
placeholder_text = "127.0.0.1:8080"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_left = 183.508
margin_top = 149.795
margin_right = 806.508
margin_bottom = 270.795
rect_pivot_offset = Vector2( -1446.91, -365.439 )
custom_fonts/font = SubResource( 1 )
text = "Chat room example"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "
"
}

[node name="Label_Name" type="Label" parent="Panel"]
margin_left = 59.8624
margin_top = 287.0
margin_right = 158.862
margin_bottom = 344.0
rect_pivot_offset = Vector2( 72, 28.5 )
custom_fonts/font = SubResource( 2 )
text = "Nome:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_IP" type="Label" parent="Panel"]
margin_left = 62.0
margin_top = 357.0
margin_right = 106.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 72, 28.5 )
custom_fonts/font = SubResource( 2 )
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_bnt" type="LinkButton" parent="Panel"]
margin_left = 59.0817
margin_top = 436.454
margin_right = 162.082
margin_bottom = 493.454
custom_fonts/font = SubResource( 3 )
text = "Entrar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_log" type="Label" parent="Panel"]
margin_left = 25.0
margin_top = 514.0
margin_right = 989.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Join_bnt" to="Panel" method="_on_Join_bnt_pressed"]
